Crossgen linux-arm shared framework
Also disambiguate between different corssgen executables

--- a/eng/targets/SharedFx.Common.targets
+++ b/eng/targets/SharedFx.Common.targets
@@ -84,6 +84,13 @@ This targets file should only be imported by .shfxproj files.
     <RuntimeAssetsOutputPath Condition="'$(RuntimeAssetsOutputPath)' == ''">$(OutputPath)lib\$(TargetFramework)\</RuntimeAssetsOutputPath>
 
     <CrossGenToolDir>$(IntermediateOutputPath)crossgen\</CrossGenToolDir>
+    <!-- Default crossgen executable -->
+    <CrossGenTool>crossgen</CrossGenTool>
+    <CrossGenTool Condition=" '$(BaseSharedFxRid)' == 'win' ">$(CrossGenTool).exe</CrossGenTool>
+    <!-- Disambiguated RID-specific crossgen executable -->
+    <CrossGenTool Condition=" '$(SharedFxRid)' == 'linux-arm' ">x64_arm\$(CrossGenTool)</CrossGenTool>
+    <CrossGenTool Condition=" '$(SharedFxRid)' == 'linux-arm64' ">x64_arm64\$(CrossGenTool)</CrossGenTool>
+    <CrossGenTool Condition=" '$(SharedFxRid)' == 'win-arm' ">x86_arm\$(CrossGenTool)</CrossGenTool>
 
     <!-- Map BaseSharedFrameworkName into properties used by the SDK to determine publish output trimming and deps.json generation -->
     <MicrosoftNETPlatformLibrary>$(BaseSharedFrameworkName)</MicrosoftNETPlatformLibrary>
@@ -221,8 +228,6 @@ This targets file should only be imported by .shfxproj files.
 
     <PropertyGroup>
       <RuntimePackageName>Microsoft.NETCore.App</RuntimePackageName>
-      <CrossGenTool>crossgen</CrossGenTool>
-      <CrossGenTool Condition="$([MSBuild]::IsOSPlatform('Windows'))">$(CrossGenTool).exe</CrossGenTool>
     </PropertyGroup>
 
     <ItemGroup>
@@ -245,6 +250,7 @@ This targets file should only be imported by .shfxproj files.
 
     <Error Text="Expected to resolve a single runtime package but instead resolved @(RuntimePackage->Count()) with identities %(RuntimePackage.Identity)" Condition="'@(RuntimePackage->Count())' != 1" />
     <Error Text="Could not find crossgen in %(RuntimePackage.ResolvedPath)" Condition="@(CrossGenToolFile->Count()) == 0" />
+    <Error Text="Found multiple crossgen in %(RuntimePackage.ResolvedPath)" Condition="@(CrossGenToolFile->Count()) > 1" />
     <Error Text="Expected to resolve a single clr jit assembly but instead resolved @(ClrJitAssembly->Count()) with identities %(ClrJitAssembly.Identity)" Condition="'@(ClrJitAssembly->Count())' != 1" />
 
     <!-- Resolve list of assemblies to crossgen -->
